<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MainFragment">

    <Button
        android:id="@+id/hostGameBt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonv1"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/host_game_bt"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/findGameBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleImage" />

    <Button
        android:id="@+id/findGameBt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonv1"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/find_game_bt"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hostGameBt" />

    <Button
        android:id="@+id/settingsBt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonv1"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/menu_bt"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findGameBt" />

    <Button
        android:id="@+id/cards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/buttonv1"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/card_bt"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsBt" />

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/titleimage"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTop4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

</android.support.constraint.ConstraintLayout>